# rocketjson

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
data/: Cargo.toml
data/src/: lib.rs
data/src/api/: mod.rs  response.rs  response_err.rs
data/src/error/: bad_request_response.rs  error_handling.rs  error_util.rs  errors.rs  json_body_error.rs  mod.rs
macro/: Cargo.toml
macro/src/: lib.rs
