[package]
name = "rocketjson"
version = "2.0.0"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/rocketjson"
repository = "https://github.com/Nis5l/rocketjson"
license = "MIT OR Apache-2.0"
keywords = ["rocket", "json", "web", "server", "api"]
description = "Crate for working with Json and Rocket"
readme = "../README.md"

[dependencies]
rocketjson_macro = { version = "2.0.0", path = "../macro" }
rocketjson_data = { version = "2.0.0", path = "../data" }
validator = "0.20"
