[package]
name = "rocketjson_data"
version = "1.0.0"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/rocketjson"
repository = "https://github.com/Nis5l/rocketjson"
license = "MIT OR Apache-2.0"
keywords = ["rocket", "json", "web", "server", "api"]
description = "Crate for working with Json and Rocket"

[dependencies]
validator = "0.14"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
