[package]
name = "rocketjson_data"
version = "1.2.1"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/rocketjson"
repository = "https://github.com/Nis5l/rocketjson"
license = "MIT OR Apache-2.0"
keywords = ["rocket", "json", "web", "server", "api"]
description = "Crate for working with Json and Rocket"
readme = "../README.md"

[dependencies]
validator = "0.14"
#rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
syn = "0.15.23"
anyhow = "1.0.51"
