[package]
name = "rocketjson_data"
version = "2.0.0"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/rocketjson"
repository = "https://github.com/Nis5l/rocketjson"
license = "MIT OR Apache-2.0"
keywords = ["rocket", "json", "web", "server", "api"]
description = "Crate for working with Json and Rocket"
readme = "../README.md"

[dependencies]
validator = "0.20"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
syn = "2.0.108"
anyhow = "1.0.100"
