[package]
name = "rocket_json_macro"
version = "0.1.0"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
syn = "0.15.23"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
