[package]
name = "rocketjson_macro"
version = "1.3.3"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/rocketjson"
repository = "https://github.com/Nis5l/rocketjson"
license = "MIT OR Apache-2.0"
keywords = ["rocket", "json", "web", "server", "api"]
description = "Crate for working with Json and Rocket"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = {version = "2.0.108", features=["full"] }
rocket = { version = "0.5.1", features = ["json"] }
validator = { version = "0.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rocketjson_data = { version = "1.3.3", path = "../data" }
